@@ -1528,6 +1528,9 @@
           see the property help on 'FalconReadoutInterval' for the defaults, or 
           run the script command 'ReportCameraProperty 0 ReadoutInterval' or 'ReportProperty FalconReadoutInterval'.
         </li>
+        <li>Restart the program, take a new exposure, and see if it still changes the 
+          exposure to get the requested frames.&nbsp; It may be necessary to iterate this 
+          process to settle on a readout interval that avoids the change.</li>
         </ul>
       
        <li>There are two things that can speed up frame alignment in SerialEM: most
