@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+3/5/24: Fixed frame sums before requesting MRC frame from a Falcon 4 so tuning
+of camera timing can be checked/iterated without revisiting dialog (In 4.1).
+
 3/1/24: Fixed setting reoported values from plugin functions with 1 or 2
 returned doubles (In 4.1).
 
